<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mater_description</name>
  <version>0.0.0</version>

  <description>Mater robot description package</description>
  <license>MIT</license>

  <author email="krzy.wojciecho@gmail.com">Krzysztof Wojciechowski</author>
  <maintainer email="krzy.wojciecho@gmail.com">Krzysztof Wojciechowski</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>xacro</build_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>